# cdk-pynamodb

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
cdk_pynamodb/: __init__.py  cdk_pynamodb.py
tests/: pynamodb_tables.py  pynamodb_tables_test.py
tests/unit/: test_cdk_pynamodb.py
